--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Nobel Spirit Performance Laboratories" />
     <link rel="canonical" href="https://nobelspirit.pl" />
 
-    <!-- Open Graph / Social Media -->
+    <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://nobelspirit.pl" />
     <meta property="og:title" content="Nobel Spirit® | Elite Equine Performance Technology" />
@@ -38,23 +38,24 @@
       }
     </style>
 
-    <!-- Import Map for ESM (React & Gemini from CDN) -->
+    <!-- Import Map – loads React and Gemini from CDN (no npm needed) -->
     <script type="importmap">
       {
         "imports": {
-          "react": "https://esm.sh/react@^19.2.3",
-          "react-dom": "https://esm.sh/react-dom@^19.2.3",
-          "@google/generative-ai": "https://esm.sh/@google/generative-ai@^1.34.0"
+          "react": "https://esm.sh/react@18.2.0",
+          "react-dom": "https://esm.sh/react-dom@18.2.0",
+          "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+          "@google/generative-ai": "https://esm.sh/@google/generative-ai"
         }
       }
     </script>
   </head>
 
-  <body class="bg-stone-50 text-stone-900">
+  <body class="bg-stone-50 text-stone-900 min-h-screen">
     <div id="root"></div>
 
-    <!-- Vite Entry Point – Works in both dev and production (built) -->
-    <script type="module" src="/src/index.tsx"></script>
-    <!-- If your entry file is main.tsx instead, change to: /src/main.tsx -->
+    <!-- Entry point – change only if your file name is different -->
+    <script type="module" src="/index.tsx"></script>
+    <!-- If your main file is named main.tsx or App.tsx, change to: /main.tsx or /App.tsx -->
   </body>
 </html>
