--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     "react/": "https://esm.sh/react@19.0.0/",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/": "https://esm.sh/react-dom@19.0.0/",
-    "@google/genai": "https://esm.sh/@google/genai@1.3.0"
+    "@google/genai": "https://esm.sh/@google/genai@1.3.0",
+    "node-fetch": "https://esm.sh/node-fetch@^3.3.2"
   }
 }
 </script>
